# aoc

./: .gitignore  Cargo.toml  LICENSE  bruh.rs  get.sh  log  log2  lut  lut2  offsets  out  p1  rust-toolchain.toml  solve.hs  x.py
gd/: aoc.gd  box.tres  main.tscn  project.godot
src/: inp.txt  main.rs  rah.rs  solve.hs  solve.kale  util.rs
