[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atools = "0.1.5"
bitvec = "1.0.1"
# hinted = "0.0.1"
itertools = "0.12.0"
memchr = "2.6.4"
rayon = "1.10.0"
# radsort = "0.1.1"
rustc-hash = { version = "2.1.0", features = ["nightly"] }
[profile.release]
lto = true
codegen-units = 1
debug = true
